<resources>
    <string name="app_name">InstagramClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_button_label">Create New Account</string>
    <string name="login_button_label">Log In</string>
    <string name="already_have_an_account_label">Already have an account? </string>
    <string name="login_already_have_account_label">Log in</string>
    <string name="login_method_phone">PHONE</string>
    <string name="login_method_email">EMAIL</string>
    <string name="edit_text_sign_up_email_hint">Email</string>
    <string name="signup_next_label">Next</string>
    <string name="enter_confirmation_code_title">EMAIL VERIFICATION</string>
    <string name="resend_code_btn_label">Resend Email.</string>
    <string name="confirmation_code_hint_label">Confirmation Code</string>
    <string name="confirmation_code_firstline">We have sent email to</string>
    <string name="username_edit_text_label">Username</string>
    <string name="name_editText_label">Full Name</string>
    <string name="password_edit_text_label">Password</string>
    <string name="name_password_title_tv">YOUR IDENTITY</string>
    <string name="forgot_your_login_details_label">Forgot your login details? </string>
    <string name="forget_password_button_label">\t Get help logging in</string>
    <string name="sing_up_btn_label">Sign up.</string>
    <string name="don_t_have_an_account_label">Don\'t have an account?</string>
    <string name="forget_password_info_label">Enter your username or email linked to your account</string>
    <string name="find_your_account_title">Find Your Account</string>
    <string name="warn_title_tv">Registration will be failed If you</string>
    <string name="close_the_app_tv">Close the App</string>
    <string name="or_label">or</string>
    <string name="press_back_button_label">Press back button</string>


<!--   Forget password email has been sent-->
    <string name="email_has_been_sent">We have sent email to</string>
    <string name="text_info">Info</string>
    <string name="text_ok">ok</string>
    <string name="text_error">Error!</string>
    <string name="text_success">Success</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_cancel">cancel</string>
    <string name="text_yes">yes</string>
    <string name="your_email_not_verfied_yet">Your email not verified yet</string>
    <string name="empty_field_warn">Please fill this field</string>
    <string name="invalid_email_field_warn">Please enter a valid email</string>
    <string name="password_empty_warn">Password may not be empty</string>
    <string name="passwor_minimum_warn">Password minimum length is 8 character and maximum 20 character</string>
    <string name="password_require_special_character"><![CDATA[Password required at least one special character(@#$%^&+=!)]]></string>
    <string name="password_require_number">Password require at least one numer(0-9)</string>
    <string name="password_letter_required">Required at least one upper case and one lower case letter</string>
    <string name="username_minimum_length">Username minimum length is 5</string>
    <string name="username_maximum_length">Username maximum length is 18</string>
    <string name="username_only_lowercase">Only lower case allowed</string>
    <string name="username_only_contain">Only lower case allowed</string>
    <string name="username_no_blank">No space allowed</string>
    <string name="following_label">Following</string>
    <string name="followers_label">Followers</string>
    <string name="posts_label">Posts</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="filter_normal">Normal</string>
    <string name="photo_label">Photo</string>
    <string name="library_label">Library</string>
</resources>